solve SelectList Component and Cart Page issues

--- a/src/sass/components/selectList/_select-list.scss
+++ b/src/sass/components/selectList/_select-list.scss
@@ -9,6 +9,9 @@
   z-index: 1;
   left: 0;
   top: 100%;
+  --max-height: unset;
+  max-height: var(--max-height);
+  overflow-y: scroll;
 }
 
 .select-list {
