--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -105,6 +105,15 @@
         flex: 1;
       }
     }
+
+    &-btns-holder {
+      flex-direction: column;
+
+      > * {
+        width: 100%;
+        margin: 0;
+      }
+    }
   }
 
   @media (max-width: 630px) {
