--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap");
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Cairo", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 // scroll bar \\
@@ -105,6 +103,10 @@ main.grid-page {
     flex-direction: column;
     min-height: 100%;
   }
+}
+
+input[type="radio"] {
+  accent-color: var(--dark);
 }
 
 // inputs && select-list-summary
