--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,11 +14,11 @@
 @import "pages/login-or-signup-page";
 
 // home page
-@import "pages/home-page";
 @import "pages/dashboard-home-page";
 
 // orders page
 @import "pages/orders-page";
+@import "components/order-card";
 
 // products pages
 @import "pages/products/product-form-page";
@@ -29,6 +29,13 @@
 
 // cart or wishlist page
 @import "pages/cart-or-wishlist-page";
+
+// payments
+// success of failed payment page
+@import "pages/payments/success-or-failed-payment";
+// donate
+@import "pages/payments/donate/donate-page";
+@import "pages/payments/donate/donate-card";
 
 // layouts \\
 
@@ -42,8 +49,11 @@
 @import "components/layout/app-footer";
 
 // some elements \\
-// order card
-@import "components/order-card";
+// yellow warning
+@import "components/warning";
+// top msg
+@import "components/top-msg";
+
 // grid list
 @import "components/layout/grid-list";
 // imgs slider
@@ -52,9 +62,6 @@
 @import "./components/fill-icon";
 // section
 @import "components/section";
-
-// top msg
-@import "components/top-msg";
 
 // modal
 @import "components/app-modal";
