--- a/src/sass/pages/_dashboard-home-page.scss
+++ b/src/sass/pages/_dashboard-home-page.scss
@@ -1,3 +1,8 @@
+.back-to-store-btn {
+  margin-bottom: 10px;
+  @include flex(center, center, 5px);
+}
+
 .dashboard-squares-list {
   display: flex;
   align-items: center;
@@ -36,6 +41,8 @@
 }
 
 .see-more-btn {
+  width: 100%;
+  text-align: center;
   margin: auto {
     top: 15px;
   }
