--- a/src/sass/pages/_profile-page.scss
+++ b/src/sass/pages/_profile-page.scss
@@ -1,13 +1,3 @@
-.delete-user-btn-holder {
-  flex: 1;
-  display: flex;
-  align-items: flex-end;
-
-  button {
-    width: 100%;
-  }
-}
-
 .profile-page-cell {
   @include flex(space-between, center, 10px);
 
@@ -38,6 +28,25 @@
   }
 }
 
+.profile-page-donation-cell {
+  align-items: center;
+  display: inline-flex;
+  gap: 10px;
+  margin-left: 10px;
+  flex-wrap: wrap;
+
+  .plan-name {
+    color: var(--main);
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+  }
+}
+
 .profile-cell-content {
   flex: 1;
 }
@@ -53,5 +62,13 @@
 
   @media (max-width: 335px) {
     flex-direction: column;
+  }
+}
+
+.delete-user-btn-holder {
+  margin-top: auto;
+
+  button {
+    width: 100%;
   }
 }
