--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -130,10 +130,6 @@ main.grid-page .container {
   min-height: 100%;
 }
 
-input[type=radio] {
-  accent-color: var(--dark);
-}
-
 input {
   padding: 5px;
 }
@@ -195,50 +191,6 @@ textarea:focus:not(.red, [readonly]) {
 
 .select-list-summary:focus:not(.red, [readonly]) {
   border-color: var(--light);
-}
-
-.swiper {
-  padding-inline: 30px;
-}
-.swiper-slide {
-  height: auto;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  background: var(--main);
-  color: #fff;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  padding-top: 2px;
-  transition: 0.3s;
-}
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
-  background: var(--dark);
-}
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-size: 20px;
-}
-
-.swiper-button-prev {
-  padding-right: 3px;
-}
-
-.swiper-button-next {
-  padding-left: 3px;
-}
-
-.swiper-button-disabled {
-  cursor: not-allowed;
-  background: #999;
-  opacity: 0.9 !important;
-  pointer-events: all;
-}
-.swiper-button-disabled:hover {
-  background: #888;
 }
 
 .container {
@@ -416,10 +368,115 @@ strong.cell-prop-name + span {
   display: block;
 }
 
+.sec-heading {
+  margin-bottom: 17px;
+  text-align: center;
+  color: var(--main);
+  position: relative;
+  width: -moz-fit-content;
+  width: fit-content;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  text-transform: capitalize;
+  font-size: 27px;
+}
+.sec-heading::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  translate: -50%;
+  height: 3px;
+  width: 80%;
+  background: currentColor;
+}
+
 @keyframes loading-animation {
   to {
     rotate: 1turn;
   }
+}
+.home-slider .swiper-slide {
+  display: unset !important;
+}
+
+.swiper-slide {
+  height: auto;
+}
+
+.swiper-button-custom-next,
+.swiper-button-custom-prev {
+  display: grid;
+  place-content: center;
+}
+.swiper-button-custom-next svg,
+.swiper-button-custom-prev svg {
+  font-size: 30px;
+}
+
+.swiper-button-custom-next,
+.swiper-button-custom-prev,
+.swiper-button-next,
+.swiper-button-prev {
+  background: var(--main);
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding-top: 2px;
+  transition: 0.3s;
+}
+.swiper-button-custom-next:hover,
+.swiper-button-custom-prev:hover,
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background: var(--dark);
+}
+.swiper-button-custom-next::after,
+.swiper-button-custom-prev::after,
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 20px;
+}
+
+.swiper-button-prev {
+  padding-right: 3px;
+}
+
+.swiper-button-next {
+  padding-left: 3px;
+}
+
+.swiper-button-disabled {
+  cursor: not-allowed;
+  background: #999;
+  opacity: 0.9 !important;
+  pointer-events: all;
+}
+.swiper-button-disabled:hover {
+  background: #888;
+}
+
+.swiper-pagination {
+  position: unset;
+  margin: 20px auto 0;
+  transform: unset !important;
+}
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+  background: var(--light);
+  border-radius: 50%;
+  transition: 0.3s;
+}
+.swiper-pagination-bullet-active-main {
+  background: var(--dark) !important;
+}
+
+.empty-page {
+  display: flex;
+  flex-direction: column;
 }
 .empty-page img {
   width: 600px;
@@ -466,6 +523,12 @@ form#auth-form {
   .home-slider {
     --height: calc(20vh + 20vw);
   }
+}
+.home-slider .swiper-wrapper {
+  height: calc(100% - 18px);
+}
+.home-slider .swiper-pagination {
+  margin-top: 5px;
 }
 .home-slider.no-home-slider-imgs {
   -webkit-user-select: none;
@@ -519,11 +582,50 @@ form#auth-form {
   }
 }
 
+.home-page-brands-list-loading-holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  flex-wrap: wrap;
+  text-align: center;
+  margin-bottom: 20px;
+  height: 107px;
+}
+.home-page-brands-list-loading-holder strong {
+  color: var(--dark);
+}
+
+.brands-list-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+  height: 50px;
+}
+
+.home-page-brands-list {
+  flex: 1;
+}
+.home-page-brands-list a {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  background: var(--trans);
+  border-radius: var(--radius);
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+}
+
 .home-page-bottom-banner {
   text-align: center;
   margin-top: 30px !important;
   padding: 80px 10px;
   background: radial-gradient(var(--trans), var(--dark-trans));
+  display: flex;
+  flex-direction: column;
 }
 .home-page-bottom-banner img {
   max-width: 100%;
@@ -573,6 +675,7 @@ form#auth-form {
   min-width: fit-content;
 }
 .home-page-products-slider .swiper {
+  padding-inline: 20px;
   max-width: 100%;
   width: 100%;
   height: 100%;
@@ -620,8 +723,10 @@ form#auth-form {
 .dashboard-page-top-btns {
   margin-bottom: 17px;
   display: flex;
-  align-items: center;
   gap: 10px;
+}
+.dashboard-page-top-btns > * {
+  flex: 1;
 }
 @media (max-width: 535px) {
   .dashboard-page-top-btns {
@@ -634,53 +739,79 @@ form#auth-form {
 .dashboard-page-top-btns button,
 .dashboard-page-top-btns a {
   text-align: center;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 5px;
+  flex-wrap: wrap;
+}
+.dashboard-page-top-btns button svg,
+.dashboard-page-top-btns a svg {
+  font-size: 24px;
+}
+
+.dashboard-squares-main-holder {
+  background: var(--trans);
+  padding: 20px;
+  border-radius: var(--radius);
+  border: 1px solid var(--main);
+  margin-bottom: 20px;
 }
 
 .dashboard-squares-list {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   gap: 20px;
-  margin-bottom: 30px;
   flex-wrap: wrap;
+  margin-bottom: 30px;
 }
 
 .dashboard-square {
-  min-width: -moz-fit-content;
-  min-width: fit-content;
+  min-width: 200px;
   flex: 1;
   background: var(--main);
+  border-radius: var(--radius);
 }
-.dashboard-square a {
-  color: #fff;
+@media (max-width: 275px) {
+  .dashboard-square {
+    min-width: unset;
+  }
+}
+.dashboard-square > * {
   width: 100%;
   padding: 10px;
+  color: #fff;
 }
-.dashboard-square a:hover {
-  background: var(--dark);
-}
-.dashboard-square a .square-top {
+.dashboard-square > * .square-top {
   display: flex;
-  gap: 10px;
   align-items: center;
+  gap: 10px;
 }
-.dashboard-square a strong {
+.dashboard-square > * .square-top .dashboard-square-title {
+  font-size: 19px;
+}
+.dashboard-square > * strong:not(.dashboard-square-title) {
   margin-top: 10px;
   font-size: 30px;
   display: block;
   text-align: center;
 }
+.dashboard-square a {
+  color: #fff;
+}
+.dashboard-square a:hover {
+  background: var(--dark);
+}
+.dashboard-square .non-anchor-dashbaord-square {
+  background: var(--dark);
+  border-radius: var(--radius);
+}
 
-.see-more-btn {
-  width: 100%;
-  text-align: center;
-  margin: auto;
-  margin-top: 15px;
+.insights-list > * + * {
+  margin-top: 50px;
 }
 
 .home-page-slider-settings-imgs-list-preview {
@@ -827,6 +958,35 @@ form#auth-form {
   margin-top: auto;
 }
 
+#filters-list-sidebar {
+  padding: 10px;
+}
+#filters-list-sidebar > * + * {
+  margin-top: 10px;
+}
+#filters-list-sidebar .products-page-filters-list > * + * {
+  margin-top: 10px;
+}
+#filters-list-sidebar .filters-list-top-btns-holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+#filters-list-sidebar .filters-list-top-btns-holder > * {
+  flex: 1;
+}
+
+.no-filters-resault-sidebar-toggler {
+  margin-inline: auto;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+
 .product-form-page-title {
   margin-bottom: 10px;
   text-transform: capitalize;
@@ -958,11 +1118,11 @@ form#auth-form {
 }
 
 .go-to-edit-product-btn {
-  margin-block: 10px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
 }
 
 .single-product-wrapper {
@@ -977,6 +1137,14 @@ form#auth-form {
   }
 }
 
+.single-product-title {
+  color: var(--main);
+  font-size: 25px;
+  text-align: center;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .single-product-color {
   display: flex;
   justify-content: flex-start;
@@ -988,6 +1156,11 @@ form#auth-form {
   height: 25px;
   display: block;
   border-radius: var(--radius);
+}
+
+.single-product-quantity-number {
+  color: var(--dark);
+  font-weight: bold;
 }
 
 .single-product-description {
@@ -1015,11 +1188,16 @@ form#auth-form {
   padding-inline: 5px;
 }
 
+.single-product-page-insights-list {
+  margin-block: 30px;
+}
+
 .single-product-btns {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
   flex-wrap: wrap;
+  border-top: var(--brdr);
+  padding-top: 10px;
 }
 .single-product-btns > * {
   display: flex;
@@ -1121,7 +1299,17 @@ form#auth-form {
   display: flex;
   flex-direction: column;
   margin-top: auto;
-  border-top: var(--brdr);
+  padding-top: 30px;
+  position: relative;
+}
+.cart-or-wishlist-down-holder::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: var(--main);
 }
 .cart-or-wishlist-down-holder .cart-or-wishlist-btns {
   display: flex;
@@ -1529,7 +1717,7 @@ form#auth-form {
   position: absolute;
   background: var(--light);
   font-weight: bold;
-  font-size: 15px;
+  font-size: 12px;
   color: #fff;
   width: 20px;
   height: 20px;
@@ -1556,6 +1744,20 @@ form#auth-form {
 .app-footer-white-logo {
   width: 40px;
   display: grid;
+}
+
+.insight-wrapper .chart-holder {
+  max-width: min(100%, var(--diminsion));
+  margin-inline: auto;
+}
+@media (max-width: 350px) {
+  .insight-wrapper .chart-holder {
+    aspect-ratio: 1/1;
+  }
+}
+.insight-wrapper .chart-holder canvas {
+  max-width: 100%;
+  width: 100%;
 }
 
 .warning {
@@ -1824,85 +2026,6 @@ form#auth-form {
   }
 }
 
-.slider-big-holder {
-  --slider-dot-dimension: 13px;
-  --slider-dots-holder-padding: 5px;
-  overflow: hidden;
-}
-.slider-big-holder.home-slider {
-  --slider-dots-height: calc(
-    var(--slider-dot-dimension) + (var(--slider-dots-holder-padding) * 2)
-  );
-  --imgs-and-dots-gap: 15px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-.slider-big-holder.home-slider .slider-real-list {
-  height: calc(100% - (var(--slider-dots-height) + var(--imgs-and-dots-gap)));
-}
-.slider-big-holder.home-slider .slider-real-list > .slider-img-holder {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slider-big-holder.home-slider .slider-dots-holder {
-  height: 23px;
-}
-
-.slider-real-list {
-  --img-width: 0;
-  display: flex;
-  gap: 10px;
-}
-.slider-real-list > * {
-  flex-basis: 100%;
-}
-
-.slider-img-holder {
-  display: flex;
-  place-content: center;
-  transition: 0.3s;
-  height: 100%;
-}
-.slider-img-holder img {
-  width: var(--img-width);
-  height: var(--img-width);
-  max-width: 100%;
-  max-height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.slider-big-holder:not(.home-slider) .slider-dots-holder {
-  margin-top: 15px;
-}
-
-.slider-dots-holder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: var(--slider-dots-holder-padding);
-}
-.slider-dots-holder > * {
-  width: var(--slider-dot-dimension);
-  height: var(--slider-dot-dimension);
-  background: var(--light);
-  display: block;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.slider-dots-holder > *.active {
-  scale: 1.25;
-  background: var(--dark);
-}
-.slider-dots-holder > *:not(.active):hover {
-  background: var(--main);
-}
-
 .fill-icon {
   --diminsions: 18px;
   position: relative;
@@ -1933,28 +2056,6 @@ form#auth-form {
 }
 *:has(> .fill-icon):is(:hover, .active) .fill-icon .fill {
   opacity: 1;
-}
-
-.section .sec-heading {
-  margin-bottom: 17px;
-  text-align: center;
-  color: var(--main);
-  position: relative;
-  width: -moz-fit-content;
-  width: fit-content;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-.section .sec-heading::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  translate: -50%;
-  height: 3px;
-  width: 80%;
-  background: currentColor;
 }
 
 .app-modal {
@@ -2268,12 +2369,31 @@ input:focus:not([readonly])::placeholder {
   translate: 0 !important;
 }
 
-.form-list [type=checkbox] {
+.form-list [type=checkbox],
+.form-list [type=radio] {
   display: none;
 }
 .form-list [type=checkbox]:checked ~ label svg {
   scale: 1;
   rotate: 0deg;
+}
+.form-list [type=radio]:checked ~ label span {
+  background: var(--trans);
+  border-radius: 50%;
+}
+.form-list [type=radio]:checked ~ label span::after {
+  scale: 1;
+}
+.form-list input[disabled] ~ label {
+  color: gray;
+  cursor: not-allowed;
+}
+.form-list input[disabled] ~ label span {
+  border-color: gray;
+  background: transparent !important;
+}
+.form-list input[disabled] ~ label span::after {
+  background: gray;
 }
 .form-list label {
   display: flex;
@@ -2292,15 +2412,26 @@ input:focus:not([readonly])::placeholder {
   color: var(--main);
 }
 .form-list label span {
+  position: relative;
   pointer-events: none;
   border: 1px solid var(--main);
   display: inline-flex;
   cursor: default;
   border-radius: 3px;
+  transition: 0.22s;
 }
 .form-list label span svg {
   scale: 0;
   rotate: 45deg;
+}
+.form-list [type=radio] ~ label span::after {
+  content: "";
+  position: absolute;
+  inset: 3px;
+  border-radius: 50%;
+  background: var(--dark);
+  transition: 0.22s;
+  scale: 0;
 }
 
 .form-table {
@@ -2381,6 +2512,7 @@ input:focus:not([readonly])::placeholder {
 }
 .list-wrapper-btn.disabled {
   cursor: not-allowed;
+  color: gray;
 }
 .list-wrapper-btn .app-arrow {
   flex-basis: 12px;
