--- a/src/sass/pages/_cart-or-wishlist-page.scss
+++ b/src/sass/pages/_cart-or-wishlist-page.scss
@@ -2,7 +2,18 @@
   display: flex;
   flex-direction: column;
   margin-top: auto;
-  border-top: var(--brdr);
+  padding-top: 30px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: var(--main);
+  }
 
   .cart-or-wishlist-btns {
     display: flex;
