--- a/src/sass/pages/dashboard/_dashboard-home-page.scss
+++ b/src/sass/pages/dashboard/_dashboard-home-page.scss
@@ -1,6 +1,11 @@
 .dashboard-page-top-btns {
   margin-bottom: 17px;
-  @include flex(null, center, 10px);
+  display: flex;
+  gap: 10px;
+
+  > * {
+    flex: 1;
+  }
 
   @media (max-width: 535px) {
     flex-direction: column;
@@ -13,53 +18,75 @@
   button,
   a {
     text-align: center;
+    height: 100%;
     width: 100%;
     @include flex(center, center, 5px);
+    flex-wrap: wrap;
+
+    svg {
+      font-size: 24px;
+    }
   }
 }
 
+.dashboard-squares-main-holder {
+  background: var(--trans);
+  padding: 20px;
+  @include cardBorder();
+  margin-bottom: 20px;
+}
+
 .dashboard-squares-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  margin-bottom: 30px;
+  @include flex(space-between, center, 20px);
   flex-wrap: wrap;
+  margin-bottom: 30px;
 }
 
 .dashboard-square {
-  min-width: fit-content;
+  min-width: 200px;
   flex: 1;
   background: var(--main);
+  border-radius: var(--radius);
 
-  a {
-    color: #fff;
+  @media (max-width: 275px) {
+    min-width: unset;
+  }
+
+  > * {
     width: 100%;
     padding: 10px;
-
-    &:hover {
-      background: var(--dark);
-    }
+    color: #fff;
 
     .square-top {
-      display: flex;
-      gap: 10px;
-      align-items: center;
+      @include flex(null, center, 10px);
+
+      .dashboard-square-title {
+        font-size: 19px;
+      }
     }
 
-    strong {
+    strong:not(.dashboard-square-title) {
       margin-top: 10px;
       font-size: 30px;
       display: block;
       text-align: center;
     }
   }
+
+  a {
+    color: #fff;
+
+    &:hover {
+      background: var(--dark);
+    }
+  }
+
+  .non-anchor-dashbaord-square {
+    background: var(--dark);
+    border-radius: var(--radius);
+  }
 }
 
-.see-more-btn {
-  width: 100%;
-  text-align: center;
-  margin: auto {
-    top: 15px;
-  }
+.insights-list > * + * {
+  margin-top: 50px;
 }
