--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -801,6 +801,7 @@ form#auth-form {
 }
 .dashboard-square a {
   color: #fff;
+  border-radius: var(--radius);
 }
 .dashboard-square a:hover {
   background: var(--dark);
@@ -2262,6 +2263,10 @@ input[type=color]::-webkit-color-swatch {
 }
 input[type=color]::-webkit-color-swatch-wrapper {
   padding: 0;
+}
+
+input[type=file] {
+  display: none;
 }
 
 textarea {
