--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -92,6 +92,7 @@ main.app-holder {
 
   > .container {
     height: auto;
+    min-width: 100%;
   }
 }
 
@@ -102,6 +103,7 @@ main.grid-page {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    min-width: 100%;
   }
 }
 
