--- a/src/sass/global/_swiper.scss
+++ b/src/sass/global/_swiper.scss
@@ -58,16 +58,19 @@
   position: unset;
   margin: 20px auto 0;
   transform: unset !important;
+  @include flex;
 
   &-bullet {
-    width: 13px;
-    height: 13px;
+    width: 25px !important;
+    height: 25px !important;
     background: var(--light);
     border-radius: 50%;
     transition: 0.3s;
 
     &-active-main {
       background: var(--dark) !important;
+      width: 20px !important;
+      height: 20px !important;
     }
   }
 }
