--- a/src/sass/pages/products/_single-product-page.scss
+++ b/src/sass/pages/products/_single-product-page.scss
@@ -81,8 +81,19 @@
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-  border-top: var(--brdr);
-  padding-top: 10px;
+  padding-top: 30px;
+  position: relative;
+  margin-top: auto;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: var(--main);
+  }
 
   > * {
     @include flex(center, center, 10px);
